@@ -1,3 +1,7 @@
+2013-10-11  Jeff Law  <law@redhat.com>
+
+	* gcc.c-torture/execute/pr58640.c: New test.
+
 2013-10-11  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/58633
